Fix image paths case sensitivity

--- a/index.html
+++ b/index.html
@@ -306,19 +306,19 @@
             // Load all media files from pics folder
             useEffect(() => {
                 const videos = [
-                    'pics/WhatsApp Video 2026-02-14 at 1.39.19 AM.mp4',
-                    'pics/WhatsApp Video 2026-02-14 at 1.39.22 AM.mp4',
-                    'pics/WhatsApp Video 2026-02-14 at 1.39.28 AM (1).mp4',
-                    'pics/WhatsApp Video 2026-02-14 at 1.39.28 AM.mp4'
+                    'Pics/WhatsApp Video 2026-02-14 at 1.39.19 AM.mp4',
+                    'Pics/WhatsApp Video 2026-02-14 at 1.39.22 AM.mp4',
+                    'Pics/WhatsApp Video 2026-02-14 at 1.39.28 AM (1).mp4',
+                    'Pics/WhatsApp Video 2026-02-14 at 1.39.28 AM.mp4'
                 ];
                 
                 const images = [
-                    'pics/WhatsApp Image 2026-02-14 at 1.39.28 AM.jpeg',
-                    'pics/WhatsApp Image 2026-02-14 at 1.39.29 AM (1).jpeg',
-                    'pics/WhatsApp Image 2026-02-14 at 1.39.29 AM (2).jpeg',
-                    'pics/WhatsApp Image 2026-02-14 at 1.39.29 AM.jpeg',
-                    'pics/WhatsApp Image 2026-02-14 at 1.39.30 AM (1).jpeg',
-                    'pics/WhatsApp Image 2026-02-14 at 1.39.30 AM.jpeg'
+                    'Pics/WhatsApp Image 2026-02-14 at 1.39.28 AM.jpeg',
+                    'Pics/WhatsApp Image 2026-02-14 at 1.39.29 AM (1).jpeg',
+                    'Pics/WhatsApp Image 2026-02-14 at 1.39.29 AM (2).jpeg',
+                    'Pics/WhatsApp Image 2026-02-14 at 1.39.29 AM.jpeg',
+                    'Pics/WhatsApp Image 2026-02-14 at 1.39.30 AM (1).jpeg',
+                    'Pics/WhatsApp Image 2026-02-14 at 1.39.30 AM.jpeg'
                 ];
                 
                 setAllMedia(videos); // Only videos for background
